fixed validation requirements

--- a/frontend/app/views/fragments/form/addressDetail.scala.html
+++ b/frontend/app/views/fragments/form/addressDetail.scala.html
@@ -14,8 +14,8 @@
         <div class="fieldset__fields">
 
             <div class="form-field">
-                <label class="label" for="address-line-one">Address line 1
-                    <input type="text" name="@(formType).lineOne" id="address-line-one"
+                <label class="label" for="address-line-one-@(formType)">Address line 1
+                    <input type="text" name="@(formType).lineOne" id="address-line-one-@(formType)"
                            class="text-input text-input--block js-address-line-one"
                            data-error-message="Please enter your @heading.toLowerCase() first line"
                            @if(addressRequired == true){data-validation="required"} />
@@ -23,23 +23,23 @@
             </div>
 
             <div class="form-field">
-                <label class="label" for="address-line-two">Address line 2
-                    <input type="text" name="@(formType).lineTwo" id="address-line-two"
+                <label class="label" for="address-line-two-@(formType)">Address line 2
+                    <input type="text" name="@(formType).lineTwo" id="address-line-two-@(formType)"
                            class="text-input text-input--block js-address-line-two"/>
                 </label>
             </div>
 
             <div class="form-field">
-                <label class="label" for="town">Town
-                    <input type="text" name="@(formType).town" id="town" class="text-input text-input--block js-town"
+                <label class="label" for="town-@(formType)">Town
+                    <input type="text" name="@(formType).town" id="town-@(formType)" class="text-input text-input--block js-town"
                            data-error-message="Please enter your @heading.toLowerCase() town"
                            @if(addressRequired == true){data-validation="required"} />
                 </label>
             </div>
 
             <div class="form-field">
-                <label class="label" for="postCode">Post code
-                    <input type="text" name="@(formType).postCode" id="postCode"
+                <label class="label" for="postCode-@(formType)">Post code
+                    <input type="text" name="@(formType).postCode" id="postCode-@(formType)"
                            class="text-input text-input--block js-post-code"
                            data-error-message="Please enter your @heading.toLowerCase() post code"
                            data-validation="required"/>
@@ -47,16 +47,16 @@
             </div>
 
             <div class="form-field">
-                <label class="label" for="county-or-state">County or State
-                    <input type="text" name="@(formType).countyOrState" id="county-or-state"
+                <label class="label" for="county-or-state-@(formType)">County or State
+                    <input type="text" name="@(formType).countyOrState" id="county-or-state-@(formType)"
                            class="text-input text-input--block js-county-state"/>
                 </label>
             </div>
 
             <div class="form-field address-fieldset__country">
-                <label class="label" for="country">Country</label>
+                <label class="label" for="country-@(formType)">Country</label>
                 <div class="input">
-                    <select name="@(formType).country" id="country">
+                    <select name="@(formType).country" id="country-@(formType)">
                         @for(country <- Countries.all) {
                         <option value="@country">@country</option>
                         }
