--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -37,7 +37,7 @@
                 @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true)
                 @fragments.form.paymentOptions(tier)
                 @fragments.form.billingAddressCTA()
-                @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", false)
+                @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true)
                 @fragments.form.cardDetail()
                 @fragments.form.submit("Join now")
             </form>
