--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -7,7 +7,7 @@
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
         @fragments.form.errorMessageDisplay()
         @fragments.form.nameDetail()
-        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true)
+        @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", false)
         @fragments.form.submit("Join now")
     </form>
 
