styling tweaks, hover, pointer things

--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -14,11 +14,24 @@
     &:active {
         text-decoration: none;
     }
+    &:hover {
+        background-color: darken(#0096C9, 10%);
+    }
 }
 
+
+
 .action--disabled {
-    background-color: #cccccc;
+    &,
+    &:visited,
+    &:hover,
+    &:focus,
+    &:active {
+        background-color: #cccccc;
+        color: #ffffff;
+    }
     border: 0;
+    cursor: default;
 }
 
 .action--wide {
