--- a/frontend/assets/stylesheets/pages/_login.scss
+++ b/frontend/assets/stylesheets/pages/_login.scss
@@ -3,13 +3,15 @@
     .signin__jumbotron {
         width: 100%;
         text-align: center;
-        padding-bottom: $gs-baseline*3;
-        margin-bottom: $gs-baseline*3;
-        border-bottom: 1px solid #000000;
-        h1 {
+        @include rem((
+            padding-bottom: $gs-baseline*3,
+            margin-bottom: $gs-baseline*3,
+            border-bottom: 1px solid #000000
+        ));
+        .signin__tagline {
             @include fs-headline(7);
         }
-        h2 {
+        .signin__sub-tagline {
             @include fs-bodyHeading(5);
             font-weight: 100;
         }
@@ -18,18 +20,25 @@
     .signin__actions {
         display: inline-block;
         text-align: center;
-        width: 40%;
-        h3 {
+        @include rem((
+            width: 40%
+        ));
+        .signin__action-prompt {
             @include fs-bodyHeading(5);
             font-weight: 100;
         }
 
-        > div {
-            padding: $gs-baseline*2 0;
+        .signin__login,
+        .signin__register {
+            @include rem((
+                padding: $gs-baseline*2 0
+            ));
         }
 
         .signin__login {
-            border-bottom: 1px solid #000000;
+            @include rem((
+                border-bottom: 1px solid #000000
+            ));
         }
     }
 }
