Make sure the funnel displays the right steps per page of the flow

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -8,7 +8,7 @@
 
             @fragments.layout.sectionHeader("Billing")
 
-            @fragments.tickets.ticketsFunnel(3)
+            @fragments.tickets.ticketsFunnel(3, StepFour = "")
 
             <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form">
 
