--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -5,7 +5,7 @@
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         @fragments.layout.sectionHeader("Thank You")
 
-        @fragments.tickets.ticketsFunnel(4)
+        @fragments.tickets.ticketsFunnel(4, StepThree= "Enter location details")
     </section>
 
     <section class="align-center">
@@ -26,11 +26,11 @@
         <h2 class="section-body-headline">Questions</h2>
         <ul class="questions u-unstyled">
             <li class="questions__list">
-                <h3 class="section-sub-body-headline">What happens next?</h2>
+                <h3 class="section-sub-body-headline">What happens next?</h3>
                     <p>Donec convallis sem non facilisis dapibus. Suspendisse tincidunt tellus at mattis porttitor. Donec nibh odio, hendrerit sed est in, fringilla imperdiet tellus. Vestibulum sapien urna, auctor nec eleifend nec, ornare eget nisi.</p>
             </li>
             <li class="questions__list">
-                <h3 class="section-sub-body-headline">I haven't received an email?</h2>
+                <h3 class="section-sub-body-headline">I haven't received an email?</h3>
                     <p>In quis nunc tristique, aliquam lectus nec, hendrerit nibh. Fusce eleifend nunc vel ante vestibulum, in ultrices augue fermentum. Etiam laoreet mauris quis sem semper, at feugiat nisi commodo.</p>
             </li>
         </ul>
