--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -11,7 +11,7 @@
 
         @fragments.layout.sectionHeader("Choose a membership tier")
 
-        @fragments.tickets.ticketsFunnel(1)
+        @fragments.tickets.ticketsFunnel(1, StepTwo = "", StepThree = "", StepFour = "")
 
         <section class="thirds two-thirds">
 
