--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -4,6 +4,8 @@
 
     @fragments.layout.sectionHeader(Config.siteTitle + " events in your area")
 
+    @fragments.tickets.ticketsFunnel(3, StepThree= "Enter location details", StepFour = "")
+
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
         @fragments.form.errorMessageDisplay()
         @fragments.form.nameDetail()
