--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -6,7 +6,7 @@
 
     <section class="section-signin">
 
-        @fragments.tickets.ticketsFunnel(2)
+        @fragments.tickets.ticketsFunnel(2, StepThree = "", StepFour = "")
 
         <div class="signin__jumbotron">
             <h1 class="signin__tagline">Progress comes through the free expression of ideas</h1>
