--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -47,7 +47,7 @@
                         @if(Config.membershipHide){
                             <i class="i i-logo i-logo--masterclass"></i>
                         }else{
-                            <i class="i i-new-mem-brand"></i>
+                            <i class="icon-sprite icon-sprite-mem-brand"></i>
                         }
                     </a>
                 </span>
