--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -1,21 +1,16 @@
+@import org.joda.time.DateTime
 <footer class="l-footer u-cf" data-link-name="footer" data-component="footer">
     <div class="l-footer__secondary gs-container" role="contentinfo">
         <ul class="colophon u-cf">
-            <li class="colophon__item"><a data-link-name="about" href="http://next.theguardian.com/blog/welcome-to-our-beta-site/">About this site</a></li>
-            <li class="colophon__item"><a data-link-name="help" href="http://www.theguardian.com/help/2012/nov/26/guardian-mobile-site">Help</a></li>
-            <li class="colophon__item"><a data-link-name="contact" href="http://www.theguardian.com/help/contact-us">Contact us</a></li>
-            <li class="colophon__item"><a data-link-name="feedback" target="_blank" href="https://www.surveymonkey.com/s/theguardian-beta-feedback">Feedback</a></li>
+            <li class="colophon__item"><a data-link-name="help" href="/help">Help</a></li>
+            <li class="colophon__item"><a data-link-name="contact" href="/help/contact-us">Contact us</a></li>
+            <li class="colophon__item"><a data-link-name="feedback" href="/feedback">Feedback</a></li>
             <li class="colophon__item"><a data-link-name="terms" href="http://www.theguardian.com/help/terms-of-service">Terms &amp; conditions</a></li>
             <li class="colophon__item"><a data-link-name="privacy" href="http://www.theguardian.com/help/privacy-policy">Privacy policy</a></li>
             <li class="colophon__item"><a data-link-name="cookie" href="http://www.theguardian.com/info/cookies">Cookie policy</a></li>
-            <li class="colophon__item hide-on-mobile">
-                <a class="js-main-site-link" rel="nofollow" href="http://www.theguardian.com/preference/platform/classic?page=http%3A%2F%2Fwww.theguardian.com%2Ftechnology%2F2014%2Fmay%2F12%2Fvideo-games-art-and-noise-tired-stereotypes-dominate-today-programme-debate%3Fview%3Dclassic" data-link-name="classic version UK">
-Current version
-                </a>
-            </li>
         </ul>
         <div class="l-footer__misc">
-            <div class="really-serious-copyright">© 2014 Guardian News and Media Limited or its affiliated companies. All&nbsp;rights&nbsp;reserved. Build #@app.BuildInfo.buildNumber</div>
+            <div class="really-serious-copyright">© @{new DateTime().year.getAsText} Guardian News and Media Limited or its affiliated companies. All rights reserved. Build #@app.BuildInfo.buildNumber</div>
         </div>
     </div>
 </footer>
