fix classname change for card icons

--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -60,7 +60,7 @@
                     Card
                 </td>
                 <td class="summary-table__cell">
-                    <span class="credit-card credit-card--inline-block @("credit-card--" + card.`type`.toLowerCase().replace(' ', '-'))"></span>
+                    <span class="credit-card credit-card--inline-block icon-sprite @("icon-sprite-card-" + card.`type`.toLowerCase().replace(' ', '-'))"></span>
                     <span>&bullet;&bullet;&bullet;&bullet; &bullet;&bullet;&bullet;&bullet; &bullet;&bullet;&bullet;&bullet; @card.last4</span>
                 </td>
             </tr>
