style changes for signin work

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -342,4 +342,7 @@ div.event {
 .ticket-info {
     @include fs-textsans(1);
     color: #878787;
+    @include rem((
+        margin-top: 8px
+    ));
 }
