Become a member page - Start of button styling

--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -19,7 +19,7 @@
         <ul class="tier-list u-unstyled">
             <li><a href="@routes.Joiner.enterDetails(Friend)" class="action action--join">Become a Friend</a></li>
             <li><a href="@routes.Joiner.enterDetails(Partner)" class="action action--join">Become a Partner</a></li>
-            <li><a href="@routes.Joiner.enterDetails(Patron)">Become a Patron</a></li>
+            <li><a href="@routes.Joiner.enterDetails(Patron)" class="action action--join">Become a Patron</a></li>
         </ul>
 
         <h2>Guardian Live events</h2>
