added password html and reference to password template

--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -35,6 +35,7 @@
                 @fragments.form.errorMessageDisplay()
                 @fragments.form.nameDetail()
                 @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true)
+                @fragments.form.passwordDetail()
                 @fragments.form.paymentOptions(tier)
                 @fragments.form.billingAddressCTA()
                 @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true)
