--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -12,51 +12,50 @@
 
     <div class="fieldset__fields">
         <div class="form-field">
-            <label class="label" for="cc-num">Card Number
-                <div class="input credit-card-container">
-                    <i class="js-credit-card-image credit-card icon-sprite icon-sprite-card-unknown"></i>
-                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number credit-card-input text-input"
-                           id="cc-num"
-                           placeholder="0000 0000 0000 0000"
-                           maxlength="19"
-                           autocomplete="off"
-                           data-validation="creditCardNumber"/>
-                </div>
-            </label>
-        </div>
-
-        <div class="form-field">
-            <label class="label" for="cc-cvc">
-                <span>Security code</span>
-                <input type="tel" size="4" data-stripe="cvc"
-                       class="js-credit-card-cvc text-input text-input--small text-input--block"
-                       id="cc-cvc"
-                       placeholder="CVC"
-                       maxlength="4"
+            <label class="label" for="cc-num">Card Number</label>
+            <div class="input credit-card-container">
+                <i class="js-credit-card-image credit-card icon-sprite icon-sprite-card-unknown"></i>
+                <input type="tel"
+                       size="20"
+                       data-stripe="number"
+                       class="js-credit-card-number credit-card-input text-input"
+                       id="cc-num"
+                       placeholder="0000 0000 0000 0000"
+                       maxlength="19"
                        autocomplete="off"
-                       data-validation="creditCardCVC"/>
-            </label>
+                       data-validation="creditCardNumber"/>
+            </div>
+
         </div>
 
         <div class="form-field">
-            <label class="label" for="cc-exp-month">
-                <span>Expiry</span>
-                <p>
-                    <select data-stripe="exp-month" id="cc-exp-month" class="js-credit-card-exp-month">
-                        <option selected="selected">Month</option>
-                        @for(month <- selectDates.validCardMonths){
-                        <option value="@month">@month</option>
-                        }
-                    </select>
-                    <span> / </span>
-                    <select data-stripe="exp-year" id="cc-exp-year" class="js-credit-card-exp-year">
-                        <option selected="selected">Year</option>
-                        @for((year, formattedYear) <- selectDates.validCardYears){
-                        <option value="@year">@formattedYear</option>
-                        }
-                    </select>
-                </p>
-            </label>
+            <label class="label" for="cc-cvc"><span>Security code</span></label>
+            <input type="tel"
+                   size="4"
+                   data-stripe="cvc"
+                   class="js-credit-card-cvc text-input text-input--small text-input--block"
+                   id="cc-cvc"
+                   placeholder="CVC"
+                   maxlength="4"
+                   autocomplete="off"
+                   data-validation="creditCardCVC"/>
+        </div>
+
+        <div class="form-field">
+            <label class="label" for="cc-exp-month"><span>Expiry</span></label>
+            <select data-stripe="exp-month" id="cc-exp-month" class="js-credit-card-exp-month">
+                <option selected="selected">Month</option>
+                @for(month <- selectDates.validCardMonths){
+                <option value="@month">@month</option>
+                }
+            </select>
+            <span> / </span>
+            <select data-stripe="exp-year" id="cc-exp-year" class="js-credit-card-exp-year">
+                <option selected="selected">Year</option>
+                @for((year, formattedYear) <- selectDates.validCardYears){
+                <option value="@year">@formattedYear</option>
+                }
+            </select>
         </div>
     </div>
 </fieldset>
