--- a/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptFirstSteps.scala.html
@@ -66,12 +66,7 @@
         document.documentElement.className = document.documentElement.className.replace(/\bjs-off\b/g, '') + ' ' + htmlClassNames.join(' ');
 
         if (isModern) {
-            document.documentElement.className = document.documentElement.className.replace(/\bjs-not-modern\b/g, '')
-            // only load JS if the browser cuts the mustard
-            var newElm = document.createElement('script');
-            newElm.async = 1;
-            newElm.src = '@Asset.at("javascripts/main.js")';
-            document.getElementsByTagName("head")[0].appendChild(newElm);
+            document.documentElement.className = document.documentElement.className.replace(/\bjs-not-modern\b/g, '');
         }
 
     })(guardian.isModernBrowser);
