--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -36,8 +36,8 @@
 
         <title>@(Config.siteTitle + " - " + title)</title>
         @fragments.javaScriptFirstSteps()
-
         <link rel="stylesheet" media="screen" href="@Asset.at("stylesheets/style.css")">
+        @fragments.javaScriptLaterSteps()
 
         <link rel="shortcut icon" type="image/png" href="@Asset.at("images/favicons/32x32.ico")">
         <link rel="apple-touch-icon" sizes="152x152" href="@Asset.at("images/favicons/152x152.png")">
@@ -79,5 +79,6 @@
             @fragments.debug()
         }
 
+        @fragments.javaScriptRequireJS()
     </body>
 </html>
