--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -35,7 +35,12 @@
                 @fragments.form.errorMessageDisplay()
                 @fragments.form.nameDetail()
                 @fragments.form.addressDetail("Delivery address", "Where shall we send your welcome pack", "deliveryAddress", true)
+
+                @*
+                //TODO write scala for the functionality to show password
                 @fragments.form.passwordDetail()
+                *@
+
                 @fragments.form.paymentOptions(tier)
                 @fragments.form.billingAddressCTA()
                 @fragments.form.addressDetail("Billing address", "The billing address for your card", "billingAddress", true)
