pull request comments

--- a/frontend/app/views/fragments/form/passwordDetail.scala.html
+++ b/frontend/app/views/fragments/form/passwordDetail.scala.html
@@ -10,20 +10,19 @@
         <div class="form-field">
             <label class="label" for="user-password">Password</label>
             <div class="form-field__note form-field__note--left">Between 6 and 20 characters</div>
-            <input
-                class="text-input js-password-strength js-register-password"
-                type="password"
-                id="user-password"
-                name="user.password"
-                value=""
-                autocomplete="off"
-                autocapitalize="off"
-                autocorrect="off"
-                spellcheck="false"
-                maxlength="20"
-                data-error-message="Please enter a password"
-                data-validation="length"
-                data-arguments="[6, 20]">
+            <input class="text-input js-password-strength js-register-password"
+                   type="password"
+                   id="user-password"
+                   name="user.password"
+                   value=""
+                   autocomplete="off"
+                   autocapitalize="off"
+                   autocorrect="off"
+                   spellcheck="false"
+                   maxlength="20"
+                   data-error-message="Please enter a password"
+                   data-validation="length"
+                   data-arguments="[6, 20]"/>
         </div>
 
     </div>
