Added more arrow icons to buttons

--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -8,7 +8,7 @@
 
         <div class="action-inline-combo">
             <h2 class="section-sub-headline u-text-hyphenate">Patron &#163;60</h2>
-            <a class="action action--inline-text action--join" href="/join/patron/enter-details">Join</a>
+            <a class="action action--inline-text action--join" href="/join/patron/enter-details">Join  <i class="icon-sprite icon-sprite-arrow_right_white"></i></a>
         </div>
     </section>
 
@@ -54,7 +54,7 @@
             </li>
             <li class="benefits-list l-row__item">
                 <span class="benefits-list__item action-inline-combo action-inline-combo--nomargin">Patron £60
-                    <a class="action action--join" href="/join/patron/enter-details">Join</a>
+                    <a class="action action--join" href="/join/patron/enter-details">Join <i class="icon-sprite icon-sprite-arrow_right_white"></i></a>
                 </span>
             </li>
         </ul>
