--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -17,12 +17,12 @@
         <div class="signin__actions">
             <div class="signin__login">
                 <h3 class="signin__action-prompt">Sign in to your Guardian account</h3>
-                <a class="action action--join" href="@Config.idWebAppSigninUrl(returnUrl)">Sign in</a>
+                <a class="action action--join" href="@Config.idWebAppSigninUrl(returnUrl)">Sign in  <i class="icon-sprite icon-sprite-arrow_right_white"></i></a>
             </div>
             <div class="signin__register">
                 <h3 class="signin__action-prompt">New to the guardian?</h3>
                 <h4>Please take a few short moments to register</h4>
-                <a class="action action--join" href="@Config.idWebAppRegisterUrl(returnUrl)">Register Now &gt;</a>
+                <a class="action action--join" href="@Config.idWebAppRegisterUrl(returnUrl)">Register Now  <i class="icon-sprite icon-sprite-arrow_right_white"></i></a>
             </div>
         </div>
 
