--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -8,7 +8,7 @@
     cursor: pointer;
     border: 0;
     text-decoration: none;
-    min-width: 220px;
+    width: 220px;
     text-align: left;
     @include fs-textsans(4);
     // overwrite fontsize
